k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollive
  labels:
    app.kubernetes.io/name: ollive
    app.kubernetes.io/managed-by: kustomize
